fixed flex causing weird order on mobile views, and dynamically hide or show filters according to whether having events

--- a/less/events.less
+++ b/less/events.less
@@ -58,6 +58,7 @@
     margin-right: 20px;
 }
 
+
 /* Events styles */
 
 .eventListWrapper {
@@ -192,3 +193,9 @@
 }
 
 /** CustomSearch Style ends **/
+
+@media screen and (max-width: 991px) {
+    .max-min-width {
+        min-width: 100%;
+    }
+}
